# prompp

./: .clangd  .gitignore  .gitlab-ci.yml  .golangci.yml  .promu.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  MAINTAINERS.md  Makefile  Makefile.common  NOTICE  OP_CHANGES.md  README install.md  README.md  TESTING.md  VERSION  go.mod  go.sum  known_vulnerabilities.vex  op.Dockerfile  op.Dockerfile2  op.mk  renovate.json  tools.go  werf-giterminism.yaml  werf.yaml  werf_cleanup.yaml
pp/: .bazelrc  .clang-tidy  .gitignore  .golangci.yml  2026-04-29-scraper-opt-article-draft.md  2026-04-29-scraper-opt-research.md  BUILD  MODULE.bazel  Makefile  WORKSPACE
pp/bare_bones/: algorithm.h  allocated_memory.h  allocator.h  bit.h  bit_sequence.h  bitset.h  concepts.h  encoding.h  gorilla.h  iterator.h  jemalloc.h  lz4_stream.h  memory.h  preprocess.h  serializer.h  snug_composite.h  snug_composite_v2.h  sparse_vector.h  stream_v_byte.h  streams.h  type_traits.h  varint.h  vector.h  vector_with_holes.h  xxhash.h
pp/bare_bones/benchmarks/: BUILD  encoding_benchmark.cpp  stream_v_byte_benchmark.cpp  stream_v_byte_sequence.flags
pp/bare_bones/tests/: bit_sequence_tests.cpp  bitset_tests.cpp  encoder_tests.cpp  exception_tests.cpp  gorilla_tests.cpp  iterator_tests.cpp  lz4_stream_tests.cpp  memory_tests.cpp  snug_composite_tests.cpp  stream_v_byte_tests.cpp  varint_tests.cpp  vector_tests.cpp  vector_with_holes_tests.cpp  zigzag_tests.cpp
pp/bazel/toolchain/: BUILD  cc_toolchain_config.bzl
pp/benchmark/: compact_sample.h  statistic.h
pp/entrypoint/: .gitignore  Makefile  aggregation_iterator.cpp  aggregation_iterator.h  build.mk  common.cpp  common.h  entrypoint.cpp.mk  entrypoint.cpp.template  entrypoint.h.template  go_constants.cpp  go_constants.h  hashdex.hpp  head_status.cpp  head_status.h  head_wal.cpp  head_wal.h  index_writer.cpp  index_writer.h  label_set.cpp  label_set.h  metrics.cpp  metrics.h  multiseries_iterator.cpp  multiseries_iterator.h  primitives_lss.cpp  primitives_lss.h  prometheus_relabeler.cpp  prometheus_relabeler.h  remote_write.cpp  remote_write.h  samples_iterator.cpp  samples_iterator.h  series_data_data_storage.cpp  series_data_data_storage.h  series_data_encoder.cpp  series_data_serialization_serialized_data.cpp  series_data_serialization_serialized_data.h  series_data_serialization_serializes_data.cpp  series_data_serialization_serializes_data.h  (+6 more)
pp/entrypoint/bridge/: go_constants.cpp  head_status.cpp  head_wal.cpp  index_writer.cpp  label_set.cpp  metrics.h  primitives_lss.cpp  primitives_lss.h  prometheus_relabeler.cpp  remote_write.cpp  series_data_data_storage.cpp  series_data_encoder.cpp  series_data_serialization_serialized_data.cpp  wal_decoder.cpp  wal_encoder.cpp  wal_hashdex.cpp
pp/entrypoint/head/: data_storage.h  lss.h  segment_samples_storage_list.h  serialization.h  series_data.h  shared_lss.h
pp/entrypoint/series_data/: aggregation_iterator.h  decode_iterator.h  loader.h  multiseries_decode_iterator.h  promql_function_names.gperf  promql_function_names_hash.h  querier.h  select_hints.h  serialization.h  series_data.h
pp/entrypoint/types/: data_storage.h  encoder.h  exception.h  go_constants_tests.cpp  hashdex.h  loader.h  loader_tests.cpp  lss.h  lss_tests.cpp  querier.h  querier_tests.cpp  serialized_data.h  serialized_data_tests.cpp
pp/entrypoint_types/: go_constants_tests.cpp  hashdex.h  loader.h  loader_tests.cpp  lss.h  lss_tests.cpp  querier.h  querier_tests.cpp  serialized_data_tests.cpp
pp/go/cppbridge/: c_garbage_collector.go  common.go  head.go  (+44 more)
pp/head/: chunk_recoder.h  chunk_recoder_tests.cpp  status.h  status_tests.cpp
pp/integration_tests/: filling_snug_composites_from_stream.cpp
pp/metrics/: calculator.h  counter.h  global_metrics.h  jemalloc_metrics.h  label_set.h  malloc_metrics.h  metric.h  metrics_page.h  metrics_page_list.h  metrics_page_list_tests.cpp  metrics_page_tests.cpp  serializer.h  serializer_tests.cpp  storage.h  storage_tests.cpp
pp/performance_tests/: .gitignore  chunk_recoder_test.cpp  chunk_recoder_test.h  full_load_lss_test.cpp  full_save_lss_test.cpp  load_gorilla_from_wal_and_calculate_hash_over_label_set_names_test.cpp  load_gorilla_from_wal_and_calculate_hash_over_label_sets_test.cpp  load_gorilla_from_wal_and_iterate_over_label_name_and_value_ids_test.cpp  load_gorilla_from_wal_and_iterate_over_label_names_and_values_test.cpp  load_gorilla_from_wal_and_iterate_over_label_set_ids_test.cpp  load_gorilla_from_wal_and_iterate_over_label_set_names_test.cpp  load_gorilla_from_wal_and_iterate_over_sample_label_name_ids_test.cpp  load_gorilla_from_wal_and_iterate_over_series_label_name_ids_test.cpp  load_gorilla_from_wal_and_make_remote_write_from_it_test.cpp  load_gorilla_from_wal_and_process_data.cpp  load_lss_from_wal_test.cpp  load_protobuf_non_naned_wal_and_process_it_with_stale_nans.cpp  load_protobuf_wal_and_save_gorilla_to_sharded_wal_test.cpp  load_protobuf_wal_and_save_gorilla_to_wal_test.cpp  load_protobuf_wal_and_save_gorilla_to_wal_with_redundants_test.cpp  performance_tests.cpp  save_gorilla_to_wal_test.cpp  save_lss_to_wal_test.cpp  series_data_encoder_test.cpp  write_protobuf_non_naned_wal_test.cpp  write_protobuf_wal_test.cpp
pp/primitives/: go_metric.h  go_model.h  go_slice.h  hash.h  label_set.h  labels_builder.h  primitives.h  snug_composites.h  snug_composites_filaments.h  symbol_table_reader.h  symbol_table_view.h  timeseries.h
pp/profiling/: profiling.h
pp/prometheus/: label_matcher.h  query.h  relabeler.h  stateless_relabeler.h
pp/scripts/: bazel.mk  ci_get_go_test_flags.sh  ci_run_unit_tests.sh  test_coredump.sh
pp/series_data/: chunk_finalizer.h  common.h  concepts.h  data_storage.h  decoder.h  encoder.h  metrics.h  outdated_chunk_merger.h  outdated_sample_encoder.h
pp/series_index/: post_shrink_snapshot_resolver.h  queried_series.h  queryable_encoding_bimap.h  reverse_index.h  sorting_index.h  symbol_source.h  trie_index.h
pp/wal/: decoder.h  encoder.h  heartbeat_metrics_inserter.h  output_decoder.h  segment_samples_storage.h  wal.h
(+873 files in other folders)
