"""prompp C++ module.

All external dependencies are managed via Bzlmod. Third-party C/C++ libraries
with custom BUILD files and patches live in //third_party:deps.bzl as a module
extension. Bazel rule sets come from the Bazel Central Registry.
"""

module(
    name = "prompp",
    version = "0",
)

# --- Bazel rule sets (from BCR) -----------------------------------------------
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# --- Tools not published to BCR (use git_override) ----------------------------
# bazel_clang_tidy is only used by `make tidy` (clang-tidy aspect); it never
# enters the production entrypoint build, so it is a dev-only dependency. This
# lets closed-loop builds skip mirroring it via `--ignore_dev_dependency`.
bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    commit = "c4d35e0d0b838309358e57a2efed831780f85cd0",
    patch_strip = 1,
    patches = [
        "//third_party/patches/bazel_clang_tidy:0001-clang-tidy-aspect-tweaks.patch",
    ],
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

# Hedron's Compile Commands Extractor (dev-only).
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# --- Toolchains ---------------------------------------------------------------
# rules_foreign_cc under Bzlmod builds some helper tools from source by default.
# That fails or misbehaves in our setup in two ways:
#
# * pkg-config drags glib in and fails to configure in minimal Linux envs.
# * GNU make inherits the project's C/C++ flags, so under `--config=asan`
#   (`-fsanitize=address`) the `make` binary itself is built with asan and
#   LeakSanitizer then reports leaks from make's own allocations the moment
#   CMake tries to run it during a compiler identification check, breaking the
#   `rules_foreign_cc` configure step for `roaring` et al.
#
# Both tools are installed in our CI image (see Dockerfile.ci) and devcontainer,
# so we register the preinstalled toolchains here, before rules_foreign_cc
# registers its built-from-source alternatives.
register_toolchains(
    "@rules_foreign_cc//toolchains:preinstalled_make_toolchain",
    "@rules_foreign_cc//toolchains:preinstalled_pkgconfig_toolchain",
    "//bazel/toolchain:cc_toolchain_for_g++-14_toolchain_aarch64",
    "//bazel/toolchain:cc_toolchain_for_g++-14_toolchain_x86_64",
)

# --- Third-party C/C++ libraries (local module extension) ---------------------
# These libraries are not consumed from BCR because we maintain custom BUILD
# files and/or local patches for them. Two extensions are used so that the
# dev-only set (gtest, google_benchmark, tracy) can be skipped via
# `--ignore_dev_dependency` in closed-loop production builds.
third_party = use_extension("//third_party:deps.bzl", "third_party_deps")
use_repo(
    third_party,
    "cedar",
    "com_google_absl",
    "fastfloat_header",
    "jemalloc",
    "lz4",
    "parallel_hashmap",
    "quasis_crypto",
    "re2",
    "roaring",
    "scope_exit",
    "simdutf",
    "snappy",
    "xxHash",
)

# Dev-only third-party libs: gtest (cc_test rules), google_benchmark
# (//:benchmark and benchmark binaries) and tracy (//:profiling, only consumed
# by benchmark targets).
third_party_dev = use_extension(
    "//third_party:deps.bzl",
    "third_party_dev_deps",
    dev_dependency = True,
)
use_repo(
    third_party_dev,
    "google_benchmark",
    "gtest",
    "tracy",
)
